Added style sheet for index

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <title>Index</title>
+        <link href="../CSS/index.css" rel="stylesheet">
     </head>
     <body></body>
 </html>
