implemented initial basic layout of index.html

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,6 +5,14 @@
         <link href="../CSS/index.css" rel="stylesheet">
     </head>
     <body>
+        <h1>
+            Welcome To My World
+        </h1>
+
+        <div id="scrollbar">
+            Placeholder
+        </div>
+
         <iframe title="Main Website Content (Desktop)" src="desktop.html"></iframe>
     </body>
 </html>
