background now scrolls infinitely

--- a/HTML/desktop.html
+++ b/HTML/desktop.html
@@ -3,6 +3,7 @@
     <head>
         <title>If you're seeing this, something's wrong</title>
         <link href="../CSS/desktop.css" rel="stylesheet">
+        <script src="../JS/desktop.js"></script>
     </head>
     <body>
     </body>
