styled basic desktop button

--- a/HTML/desktop.html
+++ b/HTML/desktop.html
@@ -6,5 +6,9 @@
         <script src="../JS/desktop.js"></script>
     </head>
     <body>
+        <button type="button">
+            <img src="../Assets/Icons/info-icon.svg" alt="Information Icon. Blue circle with a white lowercase i">
+            About
+        </button>
     </body>
 </html>
