--- a/HTML/desktop.html
+++ b/HTML/desktop.html
@@ -6,9 +6,9 @@
         <script src="../JS/desktop.js"></script>
     </head>
     <body>
-        <button type="button">
-            <img src="../Assets/Icons/info-icon.svg" alt="Information Icon. Blue circle with a white lowercase i">
-            About
+        <button type="button" onclick="window.location.href='./about.html'">
+            <img class="icon" src="../Assets/Icons/info-icon.svg" alt="Information Icon. Blue circle with a white lowercase i">
+            <b>About</b>
         </button>
     </body>
 </html>
