added home button to return to desktop

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -13,6 +13,11 @@
             Placeholder
         </div>
 
-        <iframe title="Main Website Content (Desktop)" src="desktop.html"></iframe>
+        <iframe title="Main Website Content (Desktop)" src="./desktop.html"></iframe>
+
+        <button type="button" onclick="document.querySelector('iframe').setAttribute('src', './desktop.html')">
+            <img class="icon" src="../Assets/Icons/home-button.svg" alt="Home button. A yellow house.">
+            <b>Home</b>
+        </button>
     </body>
 </html>
