scroll bar now actually scrolls

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -10,7 +10,7 @@
         </h1>
 
         <div id="scrollbar">
-            Placeholder
+            <div id="scrolltext"><b>Placeholder!! This Is a Placeholder! I love placeholders!</b></div>
         </div>
 
         <iframe title="Main Website Content (Desktop)" src="./desktop.html"></iframe>
