--- a/HTML/changelog.html
+++ b/HTML/changelog.html
@@ -1,1 +1,12 @@
 <!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>History</title>
+        <link href="../CSS/changelog.css" rel="stylesheet">
+    </head>
+    <body>
+        <h1>CHANGELOG</h1>
+        <hr>
+        <embed src="../Metadata/changelog.txt" title="Changelog Text File" width="784" height="500">
+    </body>
+</html>
