Set up basic layout of about page

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -1,1 +1,13 @@
 <!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>All about me :3</title>
+        <link href="../CSS/about.css" rel="stylesheet">
+    </head>
+    <body>
+        <div id="header">
+            <h1>What is this?</h1>
+            <h1>What are you?</h1>
+        </div>
+    </body>
+</html>
