about buttons are now clickable. all they do is change colour

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -3,15 +3,20 @@
     <head>
         <title>All about me :3</title>
         <link href="../CSS/about.css" rel="stylesheet">
+        <script src="../JS/about.js"></script>
     </head>
     <body>
         <div id="header">
-            <h1>What is this?</h1>
-            <h1>What are you?</h1>
+            <h1 onclick="activateText(this)">What is this?</h1>
+            <h1 onclick="activateText(this)">What are you?</h1>
         </div>
         <div id="main-text">
-            <p>This is the page aboutbdhjkabdwabdjwabkdhdwuiadbwadgvyuwadgwabdhvadyuwi</p>
-            <p>This is the Me about 534825748957489025789425794250574325748925749207534</p>
+            <p class="left">
+                This is the page aboutbdhjkabdwabdjwabkdhdwuiadbwadgvyuwadgwabdhvadyuwi
+            </p>
+            <p class="right">
+                This is the Me about 534825748957489025789425794250574325748925749207534
+            </p>
         </div>
     </body>
 </html>
