main text paragraphs identified by id instead of class

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -11,10 +11,10 @@
             <h1 onclick="activateText(this)">What are you?</h1>
         </div>
         <div id="main-text">
-            <p class="left">
+            <p id="left">
                 This is the page aboutbdhjkabdwabdjwabkdhdwuiadbwadgvyuwadgwabdhvadyuwi
             </p>
-            <p class="right">
+            <p id="right">
                 This is the Me about 534825748957489025789425794250574325748925749207534
             </p>
         </div>
