renamed activateText to activateSide

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -7,8 +7,8 @@
     </head>
     <body>
         <div id="header">
-            <h1 data-side="left" onclick="activateText(this)">What is this?</h1>
-            <h1 data-side="right" onclick="activateText(this)">What are you?</h1>
+            <h1 data-side="left" onclick="activateSide(this)">What is this?</h1>
+            <h1 data-side="right" onclick="activateSide(this)">What are you?</h1>
         </div>
         <div id="main-text">
             <p id="left">
