added logo to about page

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -18,5 +18,6 @@
                 This is the Me about 534825748957489025789425794250574325748925749207534
             </p>
         </div>
+        <img src="../Assets/standard_pfp_cropped.webp" alt="My Logo. It's a white sketch on a black background of a girl, viewed from behind. The line that draws her extends into an R shape, which is then revealed to be the trail of a wondering Bee.">
     </body>
 </html>
