added second more verbose about page

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -28,7 +28,7 @@
                 I am no one who I want to be.
                 I am happy when I am not.
                 Some would call me smart, some would call me arrogant,
-                some would call me cute, some would call stubborn,
+                some would call me cute, some would call me stubborn,
                 some would call me kind, some would call me selfish.
                 I am a sad, weird girl, with a fascination with the strange,
                 with the tools to show my soul, and with the interests to fill my heart.
@@ -36,5 +36,6 @@
             </p>
         </div>
         <img src="../Assets/standard_pfp_cropped.webp" alt="My Logo. It's a white sketch on a black background of a girl, viewed from behind. The line that draws her extends into an R shape, which is then revealed to be the trail of a wondering Bee.">
+        <p id="next" onclick="window.location.href='./about2.html'">Ok, but can you say that less pretentiously?</p>
     </body>
 </html>
