holy fuck i figured out how to read from a file

--- a/HTML/blog.html
+++ b/HTML/blog.html
@@ -3,6 +3,7 @@
     <head>
         <title>Here My Voice</title>
         <link href="../CSS/blog.css" rel="stylesheet">
+        <script src="../JS/blog.js"></script>
     </head>
     <body>
         <h1>Read Me! Read Me! Read Me! Read Me! Read Me! Read Me! Read Me!</h1>
